--- a/packages/users/package.json
+++ b/packages/users/package.json
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/express": "^4.17.17",
+		"@types/node": "^20.2.5",
 		"ts-node": "^10.9.1"
 	},
 	"dependencies": {
