--- a/packages/users/package.json
+++ b/packages/users/package.json
@@ -10,11 +10,15 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.17",
 		"@types/node": "^20.2.5",
+		"prisma": "^4.15.0",
 		"ts-node": "^10.9.1"
 	},
 	"dependencies": {
+		"@prisma/client": "4.15.0",
+		"bcrypt": "^5.1.0",
 		"express": "^4.18.2"
 	}
 }
