--- a/packages/users/package.json
+++ b/packages/users/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "ts-node index.ts"
+		"start": "nodemon index.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -13,6 +13,7 @@
 		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.17",
 		"@types/node": "^20.2.5",
+		"nodemon": "^2.0.22",
 		"prisma": "^4.15.0",
 		"ts-node": "^10.9.1"
 	},
