--- a/packages/users/package.json
+++ b/packages/users/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.17",
+		"@types/jsonwebtoken": "^9.0.2",
 		"@types/node": "^20.2.5",
 		"nodemon": "^2.0.22",
 		"prisma": "^4.15.0",
@@ -20,6 +21,7 @@
 	"dependencies": {
 		"@prisma/client": "4.15.0",
 		"bcrypt": "^5.1.0",
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.0"
 	}
 }
