--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,17 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"localforage": "^1.10.0",
+		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.13.0",
+		"sort-by": "^1.2.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
+		"@types/react-router-dom": "^5.3.3",
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
 		"@typescript-eslint/parser": "^5.59.0",
 		"@vitejs/plugin-react-swc": "^3.0.0",
